--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "hammerjs": "^2.0.8",
     "ng-drag-drop": "^4.0.1",
     "node-gyp-install": "^2.2.0",
+    "random-material-color": "^1.0.3",
+    "randomcolor": "^0.5.3",
     "rxjs": "^5.5.8",
     "topojson": "^3.0.2",
     "zone.js": "^0.8.22"
